ing: 확률적으로 토큰 제거하는 알고리즘 구현중중

--- a/data_analysis/beom_viz.ipynb
+++ b/data_analysis/beom_viz.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "231"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "Name: 13877, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "429"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "Name: label, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>subject_entity</th>\n",
+       "      <th>object_entity</th>\n",
+       "      <th>label</th>\n",
+       "      <th>source</th>\n",
+       "      <th>subject_start_idx</th>\n",
+       "      <th>subject_end_idx</th>\n",
+       "      <th>subject_type</th>\n",
+       "      <th>object_start_idx</th>\n",
+       "      <th>object_end_idx</th>\n",
+       "      <th>object_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22090</th>\n",
+       "      <td>22090</td>\n",
+       "      <td>1959-60 시즌 이후의 알파 에트니키 / 수페르리가 엘라다, 그리스 컵, 그리고...</td>\n",
+       "      <td>수페르리가 엘라다</td>\n",
+       "      <td>그리스</td>\n",
+       "      <td>no_relation</td>\n",
+       "      <td>wikipedia</td>\n",
+       "      <td>25</td>\n",
+       "      <td>33</td>\n",
+       "      <td>ORG</td>\n",
+       "      <td>36</td>\n",
+       "      <td>38</td>\n",
+       "      <td>POH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9618</th>\n",
+       "      <td>9618</td>\n",
+       "      <td>1959-60 시즌 이후의 알파 에트니키 / 수페르리가 엘라다, 그리스 컵, 그리고...</td>\n",
+       "      <td>수페르리가 엘라다</td>\n",
+       "      <td>그리스</td>\n",
+       "      <td>no_relation</td>\n",
+       "      <td>wikipedia</td>\n",
+       "      <td>25</td>\n",
+       "      <td>33</td>\n",
+       "      <td>ORG</td>\n",
+       "      <td>36</td>\n",
+       "      <td>38</td>\n",
+       "      <td>POH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25368</th>\n",
+       "      <td>25368</td>\n",
+       "      <td>2001년 4월 민주국민당 김윤환 의원과 민주당 의원 사이의 정책 연합과 관련한 통...</td>\n",
+       "      <td>민주국민당</td>\n",
+       "      <td>민주당</td>\n",
+       "      <td>no_relation</td>\n",
+       "      <td>wikipedia</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>ORG</td>\n",
+       "      <td>23</td>\n",
+       "      <td>25</td>\n",
+       "      <td>ORG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2500</th>\n",
+       "      <td>2500</td>\n",
+       "      <td>2001년 4월 민주국민당 김윤환 의원과 민주당 의원 사이의 정책 연합과 관련한 통...</td>\n",
+       "      <td>민주국민당</td>\n",
+       "      <td>민주당</td>\n",
+       "      <td>no_relation</td>\n",
+       "      <td>wikipedia</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>ORG</td>\n",
+       "      <td>23</td>\n",
+       "      <td>25</td>\n",
+       "      <td>ORG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3547</th>\n",
+       "      <td>3547</td>\n",
+       "      <td>2010년 10월 15일 전라북도청을 방문한 맹형규 행정안전부 장관은 도내 지자체간...</td>\n",
+       "      <td>전라북도청</td>\n",
+       "      <td>행정안전부</td>\n",
+       "      <td>no_relation</td>\n",
+       "      <td>wikipedia</td>\n",
+       "      <td>14</td>\n",
+       "      <td>18</td>\n",
+       "      <td>ORG</td>\n",
+       "      <td>29</td>\n",
+       "      <td>33</td>\n",
+       "      <td>ORG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27325</th>\n",
+       "      <td>27325</td>\n",
+       "      <td>펀치넬로는 10cm의 권정열이 피처링으로 참여한 '미안해서 미안해'로 무대에 올랐다.</td>\n",
+       "      <td>권정열</td>\n",
+       "      <td>10cm</td>\n",
+       "      <td>per:employee_of</td>\n",
+       "      <td>wikitree</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NOH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14658</th>\n",
+       "      <td>14658</td>\n",
+       "      <td>함연지는 함영준 오뚜기 회장의 장녀다.</td>\n",
+       "      <td>오뚜기</td>\n",
+       "      <td>함영준</td>\n",
+       "      <td>org:top_members/employees</td>\n",
+       "      <td>wikitree</td>\n",
+       "      <td>9</td>\n",
+       "      <td>11</td>\n",
+       "      <td>ORG</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>PER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6936</th>\n",
+       "      <td>6936</td>\n",
+       "      <td>함연지는 함영준 오뚜기 회장의 장녀다.</td>\n",
+       "      <td>오뚜기</td>\n",
+       "      <td>함영준</td>\n",
+       "      <td>org:top_members/employees</td>\n",
+       "      <td>wikitree</td>\n",
+       "      <td>9</td>\n",
+       "      <td>11</td>\n",
+       "      <td>ORG</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>PER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20898</th>\n",
+       "      <td>20898</td>\n",
+       "      <td>화려한 재기를 뒤로하고 고(故) 안재환에게 돈을 빌려줬다는 루머로 마음고생을 하던 ...</td>\n",
+       "      <td>최진실</td>\n",
+       "      <td>2008년 10월 2일</td>\n",
+       "      <td>per:date_of_death</td>\n",
+       "      <td>wikitree</td>\n",
+       "      <td>46</td>\n",
+       "      <td>48</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>51</td>\n",
+       "      <td>62</td>\n",
+       "      <td>DAT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4248</th>\n",
+       "      <td>4248</td>\n",
+       "      <td>화려한 재기를 뒤로하고 고(故) 안재환에게 돈을 빌려줬다는 루머로 마음고생을 하던 ...</td>\n",
+       "      <td>최진실</td>\n",
+       "      <td>2008년 10월 2일</td>\n",
+       "      <td>per:date_of_death</td>\n",
+       "      <td>wikitree</td>\n",
+       "      <td>46</td>\n",
+       "      <td>48</td>\n",
+       "      <td>PER</td>\n",
+       "      <td>51</td>\n",
+       "      <td>62</td>\n",
+       "      <td>DAT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>84 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id                                           sentence  \\\n",
+       "22090  22090  1959-60 시즌 이후의 알파 에트니키 / 수페르리가 엘라다, 그리스 컵, 그리고...   \n",
+       "9618    9618  1959-60 시즌 이후의 알파 에트니키 / 수페르리가 엘라다, 그리스 컵, 그리고...   \n",
+       "25368  25368  2001년 4월 민주국민당 김윤환 의원과 민주당 의원 사이의 정책 연합과 관련한 통...   \n",
+       "2500    2500  2001년 4월 민주국민당 김윤환 의원과 민주당 의원 사이의 정책 연합과 관련한 통...   \n",
+       "3547    3547  2010년 10월 15일 전라북도청을 방문한 맹형규 행정안전부 장관은 도내 지자체간...   \n",
+       "...      ...                                                ...   \n",
+       "27325  27325    펀치넬로는 10cm의 권정열이 피처링으로 참여한 '미안해서 미안해'로 무대에 올랐다.   \n",
+       "14658  14658                              함연지는 함영준 오뚜기 회장의 장녀다.   \n",
+       "6936    6936                              함연지는 함영준 오뚜기 회장의 장녀다.   \n",
+       "20898  20898  화려한 재기를 뒤로하고 고(故) 안재환에게 돈을 빌려줬다는 루머로 마음고생을 하던 ...   \n",
+       "4248    4248  화려한 재기를 뒤로하고 고(故) 안재환에게 돈을 빌려줬다는 루머로 마음고생을 하던 ...   \n",
+       "\n",
+       "      subject_entity object_entity                      label     source  \\\n",
+       "22090      수페르리가 엘라다           그리스                no_relation  wikipedia   \n",
+       "9618       수페르리가 엘라다           그리스                no_relation  wikipedia   \n",
+       "25368          민주국민당           민주당                no_relation  wikipedia   \n",
+       "2500           민주국민당           민주당                no_relation  wikipedia   \n",
+       "3547           전라북도청         행정안전부                no_relation  wikipedia   \n",
+       "...              ...           ...                        ...        ...   \n",
+       "27325            권정열          10cm            per:employee_of   wikitree   \n",
+       "14658            오뚜기           함영준  org:top_members/employees   wikitree   \n",
+       "6936             오뚜기           함영준  org:top_members/employees   wikitree   \n",
+       "20898            최진실  2008년 10월 2일          per:date_of_death   wikitree   \n",
+       "4248             최진실  2008년 10월 2일          per:date_of_death   wikitree   \n",
+       "\n",
+       "       subject_start_idx  subject_end_idx subject_type  object_start_idx  \\\n",
+       "22090                 25               33          ORG                36   \n",
+       "9618                  25               33          ORG                36   \n",
+       "25368                  9               13          ORG                23   \n",
+       "2500                   9               13          ORG                23   \n",
+       "3547                  14               18          ORG                29   \n",
+       "...                  ...              ...          ...               ...   \n",
+       "27325                 12               14          PER                 6   \n",
+       "14658                  9               11          ORG                 5   \n",
+       "6936                   9               11          ORG                 5   \n",
+       "20898                 46               48          PER                51   \n",
+       "4248                  46               48          PER                51   \n",
+       "\n",
+       "       object_end_idx object_type  \n",
+       "22090              38         POH  \n",
+       "9618               38         POH  \n",
+       "25368              25         ORG  \n",
+       "2500               25         ORG  \n",
+       "3547               33         ORG  \n",
+       "...               ...         ...  \n",
+       "27325               9         NOH  \n",
+       "14658               7         PER  \n",
+       "6936                7         PER  \n",
+       "20898              62         DAT  \n",
+       "4248               62         DAT  \n",
+       "\n",
+       "[84 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column = ['sentence', 'subject_entity', 'object_entity', 'label', 'subject_start_idx', 'object_start_idx', 'subject_end_idx', 'object_end_idx', 'source']\n",
+    "train_df[train_df.duplicated(column, keep=False)].sort_values(by='sentence')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1945,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1975,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2026,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2137,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2191,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2232,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
