add: ensemble 완성

--- a/ensemble/ensemble.ipynb
+++ b/ensemble/ensemble.ipynb
@@ -2,7 +2,17 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "sys.path.append('/opt/ml')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
       "metadata": {
         "id": "tAuUil0AXQ-I"
       },
@@ -12,20 +22,12 @@
         "import numpy as np\n",
         "import os\n",
         "import pickle\n",
-        "from inference import num_to_label"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### 파일 명은 OOO_\"LB public score\"_.csv여야 함"
+        "from utils import data_controller"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "id": "cGbbgHhIXQ-M",
         "outputId": "7ad2ec79-7ac8-4e88-ecbd-2578c8d7db59"
@@ -35,17 +37,18 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['._sample_submission.csv', 'output (7).csv', '.ipynb_checkpoints', 'submission.csv', '._.ipynb_checkpoints', 'latestbilstm.csv', 'latestbilstm1.csv', 'org_per_split.csv', 'org_per_split_512.csv', '뭐더라.csv']\n"
+            "['05-16_14:27:21_CJW_23_EP5_bs64_warmup0.1_LR3e-5_tml160_val15_RD_APNS_QP_FocLoss_LSTMNT____86.7762_.csv', '05-16_15:04:09_CJW_23_EP5_bs64_warmup0.1_LR3e-5_tml160_val15_RD_NC_APNS_QP_LabSmth_LSTMNT____87.2437_.csv', '05-16_23:27:41_CJW_BERT_23_EP1_bs64_LR3e-5_tml160_noVal_RD_APNS_QP_LabSmth_LSTMNT____84.2351_.csv']\n"
           ]
         }
       ],
       "source": [
-        "print(os.listdir(\"./ingredients\"))"
+        "ensemble_csvs_dir = \"./ingredients\"\n",
+        "print(os.listdir(ensemble_csvs_dir))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "id": "_1Ym8upGXQ-N"
       },
@@ -58,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
         "id": "tdvtpc_oXQ-N",
         "outputId": "40e03d09-4240-4d30-fd90-84eefea7eb90"
@@ -68,25 +71,36 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(7, 7765, 30)\n"
+            "(3, 7765, 30)\n",
+            "(3,)\n"
           ]
         }
       ],
       "source": [
-        "ensemble_csvs_path = \"./ensemble_csv_list\"\n",
         "prob_list = []\n",
+        "weights = []\n",
         "\n",
-        "for csv in os.listdir(ensemble_csvs_path):\n",
+        "for csv in os.listdir(ensemble_csvs_dir):\n",
         "    if csv[0] != '.':\n",
-        "        prob = [eval(x) for x in pd.read_csv(os.path.join(ensemble_csvs_path,csv))[\"probs\"]]\n",
+        "        # Extract the score from the filename and append it to the weights\n",
+        "        score = float(csv.split('_')[-2])\n",
+        "        weights.append(score)\n",
+        "\n",
+        "        # Load the probabilities and append them to the list\n",
+        "        prob = [eval(x) for x in pd.read_csv(os.path.join(ensemble_csvs_dir,csv))[\"probs\"]]\n",
         "        prob_list.append(prob)\n",
+        "\n",
+        "# Convert the lists to NumPy arrays\n",
         "new_probs = np.array(prob_list)\n",
-        "print(new_probs.shape)"
+        "weights = np.array(weights)\n",
+        "\n",
+        "print(new_probs.shape)\n",
+        "print(weights.shape)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "id": "4G6IRh9dXQ-O",
         "outputId": "2292076a-e781-4a94-c1ff-65dcb0a0c5f8"
@@ -97,37 +111,33 @@
           "output_type": "stream",
           "text": [
             "(7765, 30)\n",
-            "[[1.27447740e-01 2.39017023e-03 2.32121045e-01 ... 5.96098872e-05\n",
-            "  1.17639407e-03 7.06922957e-05]\n",
-            " [2.49320846e-02 1.51473076e-04 1.32540101e-04 ... 7.17252667e-04\n",
-            "  1.24423276e-04 7.80853440e-04]\n",
-            " [9.89851035e-01 1.25095275e-03 5.03237943e-04 ... 1.73126480e-05\n",
-            "  9.97234215e-05 9.69668550e-06]\n",
+            "[[0.14042456 0.00510988 0.03538339 ... 0.00192084 0.00328135 0.00237828]\n",
+            " [0.10781213 0.00479456 0.00287686 ... 0.00287671 0.00260704 0.00207379]\n",
+            " [0.92870803 0.00194232 0.0021319  ... 0.00226959 0.00202293 0.00210774]\n",
             " ...\n",
-            " [5.66847446e-03 9.82000039e-01 8.46983606e-04 ... 2.79699897e-05\n",
-            "  5.22343776e-03 2.24485272e-05]\n",
-            " [7.77596828e-01 1.54335088e-04 1.19626599e-04 ... 1.31360424e-03\n",
-            "  3.43349944e-04 1.42331945e-03]\n",
-            " [9.66238708e-01 6.04509484e-05 3.61337416e-05 ... 2.49392164e-04\n",
-            "  1.74381597e-05 2.02246919e-04]]\n",
-            "확률합: [1.00000005 0.99999998 1.00000001 0.99999998 1.00000002 1.00000001\n",
-            " 0.99999999 0.99999995 0.99999997 0.99999995 1.00000005 1.00000008\n",
-            " 0.99999998 1.00000006 1.00000001 1.00000001 1.         0.99999997\n",
-            " 1.00000003 0.99999998 1.00000002 0.99999997 1.00000003 1.00000001\n",
-            " 0.99999999 1.00000002 1.00000002 1.00000004 0.99999996 0.99999998]\n"
+            " [0.02328038 0.91375961 0.00227886 ... 0.00212933 0.00380704 0.00212323]\n",
+            " [0.84183117 0.0014515  0.00152172 ... 0.00185327 0.00239037 0.00248169]\n",
+            " [0.93804209 0.00176347 0.0015144  ... 0.00176434 0.00168871 0.00200606]]\n",
+            "Total to: [1.00000006 0.99999999 1.00000005 0.99999996 1.00000009 1.00000001\n",
+            " 1.00000002 1.00000001 1.         0.99999997 0.99999998 0.99999996\n",
+            " 0.99999996 1.00000007 0.99999999 0.99999999 0.99999995 0.99999995\n",
+            " 0.99999992 0.99999998 1.00000002 1.         1.00000003 1.\n",
+            " 1.00000004 1.         0.99999996 1.00000005 0.99999999 1.00000004]\n"
           ]
         }
       ],
       "source": [
-        "avg_probs = np.sum(new_probs,axis=0)/len(prob_list)\n",
-        "print(avg_probs.shape)\n",
-        "print(avg_probs)\n",
-        "print(\"확률합:\", np.sum(avg_probs[0:30], axis=1))"
+        "# Calculate the weighted average of the probabilities\n",
+        "weighted_avg_probs = np.sum(new_probs * weights[:, None, None], axis=0) / np.sum(weights)\n",
+        "\n",
+        "print(weighted_avg_probs.shape)\n",
+        "print(weighted_avg_probs)\n",
+        "print(\"Total to:\", np.sum(weighted_avg_probs[0:30], axis=1))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "q4o4oVnDXQ-O",
         "outputId": "f33b6b00-c96d-4c46-efed-a7d32cbed67b"
@@ -142,51 +152,43 @@
         }
       ],
       "source": [
-        "pred_answer = np.argmax(avg_probs, axis=-1)\n",
+        "pred_answer = np.argmax(weighted_avg_probs, axis=-1)\n",
         "print(pred_answer.shape)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "id": "uTMlAGxVXQ-P"
-      },
-      "outputs": [],
-      "source": [
-        "pred_answer = num_to_label(pred_answer)\n",
-        "print(len(pred_answer))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2NJBzNpHXQ-P",
-        "outputId": "18e6c32d-8e61-4080-a847-a447a1f29fdf"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "7765 7765 7765\n"
+            "7765\n"
           ]
         }
       ],
       "source": [
-        "output = pd.DataFrame({'id':test_id,'pred_label':pred_answer,'probs':avg_probs.tolist(),})\n",
-        "output.to_csv('./prediction/ensembled_output.csv', index=False) "
+        "num2label = data_controller.load_num2label()\n",
+        "label_answer = [num2label[i] for i in pred_answer]\n",
+        "print(len(pred_answer))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
-        "id": "ngyS8a6tXQ-Q"
+        "id": "2NJBzNpHXQ-P",
+        "outputId": "18e6c32d-8e61-4080-a847-a447a1f29fdf"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "output = pd.DataFrame({'id':test_id,'pred_label':label_answer,'probs':weighted_avg_probs.tolist(),})\n",
+        "output.to_csv('./food/ensembled_output.csv', index=False) "
+      ]
     }
   ],
   "metadata": {
