add: file name convention

--- a/ensemble/ensemble.ipynb
+++ b/ensemble/ensemble.ipynb
@@ -26,6 +26,15 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 파일 명은 OOO_[LB Public score]_.csv의 형식이어야 함.\n",
+        "Ex. 05-16_14:27:21_CJW_23_EP5_bs64_warmup0.1_LR3e-5_tml160_val15_RD_APNS_QP_FocLoss_LSTMNT____86.7762_.csv"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 62,
       "metadata": {
